hphp/hack/test/typecheck/this_ret_bad2.php.like_types.exp
File "this_ret_bad2.php", line 35, characters 3-46:
  Foo<[unresolved]>
File "this_ret_bad2.php", line 41, characters 16-34:
Invalid argument (Typing[4110])
File "this_ret_bad2.php", line 19, characters 38-41:
Expected ~<expr#1> because it is an unenforceable type
File "this_ret_bad2.php", line 25, characters 27-29:
But got Bar
